--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="assets/styles.css">
 <link rel="icon" href="images/logo.png">
 <meta name="data-ein" content="931737720">
+<meta name="facebook-domain-verification" content="2dvy06nxv66g3hltywr9onv0nvfv69" />
 <meta name="data-name" content="C.H.A.N.G.E., Inc.">
 <meta name="data-email" content="contact@changeinc.entiora2712.shop">
 <meta name="data-phone" content="+13093093866">
